<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/ABG.Text.SectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16sdp"
            android:text="@string/now_playing"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            tools:listitem="@layout/list_item_movie" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar_now_playing_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView1"
            style="@style/ABG.Text.SectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:drawablePadding="@dimen/_16sdp"
            android:text="@string/popular"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_now_playing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView1"
            tools:listitem="@layout/list_item_movie" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar_popular_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ABG.ProgressIndicator.Horizontal"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/materialTextView1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            style="@style/ABG.Text.SectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:drawablePadding="@dimen/_16sdp"
            android:text="@string/top_rated"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_popular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
            tools:listitem="@layout/list_item_movie" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar_top_rated_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ABG.ProgressIndicator.Horizontal"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            style="@style/ABG.Text.SectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:drawablePadding="@dimen/_16sdp"
            android:text="@string/upcoming"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_top_rated" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            tools:listitem="@layout/list_item_movie" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar_upcoming_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ABG.ProgressIndicator.Horizontal"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/materialTextView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>